force-app/main/default/objects/Crawler_Finding__c/Crawler_Finding__c.object-meta.xml
<CustomObject>
    <label>Crawler Finding</label>
    <pluralLabel>Crawler Findings</pluralLabel>
    <nameField>
        <label>Finding Name</label>
        <type>AutoNumber</type>
        <displayFormat>FIND-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>