force-app/main/default/objects/Crawler_Finding__c/fields/Fixable__c.field-meta.xml
<CustomField>
    <fullName>Fixable__c</fullName>
    <label>Fixable</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>