force-app/main/default/objects/Crawler_Finding__c/fields/Invite_Request__c.field-meta.xml
<CustomField>
    <fullName>Invite_Request__c</fullName>
    <label>Invite Request</label>
    <type>MasterDetail</type>
    <referenceTo>Invite_Request__c</referenceTo>
    <relationshipLabel>Crawler Findings</relationshipLabel>
    <relationshipName>Crawler_Findings</relationshipName>
</CustomField>