force-app/main/default/objects/Crawler_Finding__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
        <value>
            <fullName>Open</fullName>
            <default>true</default>
        </value>
        <value>
            <fullName>Flagged</fullName>
        </value>
        <value>
            <fullName>Resolved</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>