force-app/main/default/objects/Crawler_Finding__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <filterScope>Everything</filterScope>
    <label>All Crawler Findings</label>
    <columns>NAME</columns>
    <columns>Invite_Request__c</columns>
    <columns>Severity__c</columns>
    <columns>Status__c</columns>
    <columns>Fixable__c</columns>
</ListView>